xx yy xxxx: 0.5.1 Miek <miek@miek.nl>
  -- ?? --
  * Gnumakefile.in: Dont create unneed directories (Sven Hartrump)

17 May 2007: 0.5.0 Miek <miek@miek.nl>
  -- major new release - not backwards compatible -
  * All paths have changed /usr/bin is now used, no more sbin
  * All manual pages now fall in the section 1, not 8
  * No more use of /etc/rdup, only ~/.rdup
  * rdup-snap-link is the only script that optionally will
    check /etc/rdup
  * rdup: use ctime not the mtime
  * rdup: major rewrite of the core algorithm, it now uses
    a remove-list, new-list and posibly changed list - 
    only items that are on the changed list are ctime checked.
  * rdup: much better algorithm for detecting incremental filesystem
    changes; directory renames are now detected
  * rdup: the internal filelist is extended with a device number
    and a inode number; these are needed to detect directory moves.
    switch
  * backup with: rdup-simple
  * restore with: rdup-restore
  * todo: rdup-restore in the same line as rdup-simple
  * todo: rdup-snapshot
  * Major rewrite of rdup-restore
  * Removed: rdup-dump, rdup-snapshot, rdup-mirror


09 May 2007: 0.3.9 Miek <miek@miek.nl>
  -- new features and fixes --
   * Add -S and -D to the known options of rdup-restore (reported by 
     Ben Coffey)
   * Add runtime check to find mcrypt to rdup-crypt (reported by Ben
     Coffey)
   * Add runtime checks to rdup-gzip and rdup-gpg too
   * Documentation updates and tweaks
   * Added rdup-simple; 
   	- other calling semantics
	- uses ~/.rdup for storing files
   * Added rdup-gpg - encrypt with gpg, decryption makes use of
     gpg-agent, otherwise you need to type your passphrase for 
     every file
   * Force ordering of encryption and compressions. First compress
     then encrypt; all scripts do this now. 
   * Force ordering of decryption and decompression: First decrypt
     then decompress.
     

14 Mar 2007: 0.3.8 Miek <miek@miek.nl>
  -- bugfixes --