@@ -1,6 +1,7 @@
 xx yy xxxx: 0.5.1 Miek <miek@miek.nl>
   -- ?? --
-  * Gnumakefile.in: Dont create unneed directories (Sven Hartrump)
+  * Gnumakefile.in: Dont create unneed directories (Sven Hartrump) 
+  * Documentation: moved to restructed text as the source for all docs
 
 17 May 2007: 0.5.0 Miek <miek@miek.nl>
   -- major new release - not backwards compatible -
